[project]
name = "buisbot"
version = "0.1.0"
description = ""
authors = [{ name = "Kotaz", email = "semechkagent@gmail.com" }]
requires-python = ">=3.13,<4.0"
readme = "README.md"
dependencies = [
    "pyrogram>=2.0.106,<3.0.0",
    "google-genai>=1.11.0,<2.0.0",
    "tgcrypto-pyrofork>=1.2.7,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
